# webarc

./: .gitignore  Cargo.toml  README.md
doc/: extractors.md
migrations/2026-01-13-174423-0000_initial/: down.sql  up.sql
src/: lib.rs
src/core/: config.rs  extract.rs  mod.rs  models.rs  schema.rs  state.rs
src/msg/: clicor.rs  corwrk.rs  mod.rs
src/worker/: config.rs  state.rs  task.rs
templates/: login.html
