[package]
name = "webarc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
log = "0.4.29"
pretty_env_logger = "0.5.0"
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
