[package]
name = "webarc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
async-process = "2.5.0"
async-stream = "0.3.6"
bcrypt = "0.18.0"
diesel = { version = "2.3.5", features = ["postgres"] }
diesel-async = { version = "0.7.4", features = ["mobc", "postgres"] }
hex = "0.4.3"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
